<resources>
    <string name="app_name">appRegistro</string>
    <string name="lista_titulo">Lista de Productos</string>
    <string name="lista_movimiento_titulo">Lista de Movimientos</string>

    <string name="header_titulo">Registro de Productos</string>
    <string name="header_sub">Manejo de las sentencias select,insert,update y delete</string>

    <string name="label_nombre">Nombre del Producto:</string>
    <string name="hint_nombre">Nombre del producto</string>

    <string name="label_precio">Precio del Producto: </string>
    <string name="hint_precio">Precio del producto</string>

    <string name="label_stock">Stock del Producto: </string>
    <string name="hint_stock">Stock del producto</string>
    <string name="titulo_botonG">Guardar Producto</string>

    <string name="titulo_boton_modificar">Modificar</string>
    <string name="titulo_boton_eliminar">Eliminar</string>
    <string name="btn_vender">Vender</string>

    <string name="titulo_dialog">Confirmar Eliminación</string>
    <string name="mensaje_dialog">Estas seguro que quiere eliminar este producto</string>
    <string name="confirmacion_dialog">Si</string>
    <string name="negacion_dialog">No</string>
    <string name="msj_toastD">Producto Eliminado</string>

    <string name="titulo_modificar">Modificar Datos</string>
    <string name="titulo_boton_actualizar">Actualizar Datos</string>
</resources>